<resources>
    <string name="app_name">EAD_Mobile_App</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="repeat_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Log In</string>
    <string name="log_in_text">Log In</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="modify_account">Modify Account</string>
    <string name="search_for_products">Search for products...</string>
    <string name="shirts">Shirts</string>
    <string name="pants">Pants</string>
    <string name="role">Role</string>
    <string name="customer">Customer</string>
    <string name="name">Name</string>
</resources>